@@ -411,6 +411,13 @@
 -(void) start
 {
 	[super start];
+	
+	// 
+	if (startAngle > 0)
+		startAngle = fmodf(startAngle, 360.0f);
+	else
+		startAngle = fmodf(startAngle, -360.0f);
+	
 	startAngle = [target rotation];
 	angle -= startAngle;
 	if (angle > 180)
